@@ -18,6 +18,8 @@ David Shawley <boredc0der@users.sourceforge.net>
 Sergey Skorokhodov <ryppka@users.sourceforge.net>
 Tom Tan <>
 Sergey N. Yatskevich <snc@begun.ru>
+Marc Chevrier 
+Philippe Cuvillier
 
 --
-$Id: //poco/1.3/dist/CONTRIBUTORS#5 $
+$Id: //poco/1.3/dist/CONTRIBUTORS#7 $
