@@ -1,7 +1,7 @@
 //
 // CompressTest.cpp
 //
-// $Id: //poco/1.3/Zip/testsuite/src/CompressTest.cpp#6 $
+// $Id: //poco/1.3/Zip/testsuite/src/CompressTest.cpp#7 $
 //
 // Copyright (c) 2007, Applied Informatics Software Engineering GmbH.
 // and Contributors.
@@ -141,6 +141,19 @@ void CompressTest::testManipulatorReplace()
 }
 
 
+void CompressTest::testSetZipComment()
+{    
+	std::string comment("Testing...123...");
+	std::ofstream out("comment.zip", std::ios::binary);
+	Poco::Path theFile(ZipTest::getTestFile("test.zip"));
+	Compress c(out, true);
+	c.addFile(theFile, theFile.getFileName());
+	c.setZipComment(comment);
+	ZipArchive a(c.close());
+	assert(a.getZipComment() == comment);
+}
+
+
 void CompressTest::setUp()
 {
 }
@@ -160,6 +173,7 @@ CppUnit::Test* CompressTest::suite()
 	CppUnit_addTest(pSuite, CompressTest, testManipulator);
 	CppUnit_addTest(pSuite, CompressTest, testManipulatorDel);
 	CppUnit_addTest(pSuite, CompressTest, testManipulatorReplace);
+    CppUnit_addTest(pSuite, CompressTest, testSetZipComment);
 
 	return pSuite;
 }
