@@ -89,6 +89,10 @@ Release 1.3.6 (2009-11-24)
 - NetSSL_OpenSSL: the SSL/TLS session cache is now disabled by default and
   can be enabled per Context using Poco::Net::Context::enableSessionCache().
 - fixed SF# 2899039: Wrong DST handling in LocalDateTime 
+- added RWLock::ScopedReadLock and RWLock::ScopedWriteLock (contributed by Marc Chevrier)
+- added Thread::TID type, as well as Thread::tid() and Thread::currentTid() to obtain the native 
+  thread handle/ID
+- added Zip file comment support
 
 
 Release 1.3.5 (2009-05-11)
@@ -1135,4 +1139,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#61 $
+$Id: //poco/1.3/dist/CHANGELOG#63 $
